--- a/sonarqube-ant-task/pom.xml
+++ b/sonarqube-ant-task/pom.xml
@@ -24,16 +24,18 @@
       <artifactId>sonar-scanner-api</artifactId>
       <version>2.8</version>
     </dependency>
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>3.0.0</version>
-    </dependency>
     <!-- Would be provided by environment -->
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
       <version>${ant.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- Not needed at runtime -->
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>3.0.2</version>
       <scope>provided</scope>
     </dependency>
     <!-- Unit tests -->
