Fix javadoc with Java 11

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,20 @@
     <artifactsToPublish>${project.groupId}:sonarqube-ant-task:jar</artifactsToPublish>
   </properties>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+	          <source>8</source>
+          </configuration>
+        </plugin>  
+      </plugins>
+    </pluginManagement>	   
+  </build>	
+  
   <profiles>
     <profile>
       <id>its</id>
