BUILD-820 adapted dockerfile as well

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -73,6 +73,8 @@ qa_task:
     namespace: default
     cpu: 1.7
     memory: 5Gb
+    docker_arguments:
+      ANT_VERSION: 1.10.8
   env:
     matrix:
       - SQ_VERSION: LATEST_RELEASE[7.9]
