--- a/sonarqube-ant-task/pom.xml
+++ b/sonarqube-ant-task/pom.xml
@@ -15,6 +15,7 @@
   
   <properties>
     <ant.version>1.10.11</ant.version>
+    <maven.compiler.release>8</maven.compiler.release>
   </properties>
 
   <dependencies>
