--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -20,6 +20,7 @@ env:
   ARTIFACTS: "\
     org.sonarsource.scanner.ant:ant:jar,\
     org.sonarsource.scanner.ant:sonarqube-ant-task:jar"
+  NIGHTLY_CRON: 'nightly-cron'
 
 #
 # RE-USABLE CONFIGS
@@ -32,6 +33,9 @@ container_definition: &CONTAINER_DEFINITION
 
 only_sonarsource_qa: &ONLY_SONARSOURCE_QA
   only_if: $CIRRUS_USER_COLLABORATOR == 'true' && ($CIRRUS_PR != "" || $CIRRUS_BRANCH == "master" || $CIRRUS_BRANCH =~ "branch-.*" || $CIRRUS_BRANCH =~ "dogfood-on-.*")
+
+except_nightly_cron: &EXCEPT_ON_NIGHTLY_CRON
+  only_if: $CIRRUS_CRON != $NIGHTLY_CRON
 
 #
 # TASKS
@@ -90,6 +94,7 @@ promote_task:
   depends_on:
     - qa
   <<: *ONLY_SONARSOURCE_QA
+  <<: *EXCEPT_ON_NIGHTLY_CRON
   eks_container:
     <<: *CONTAINER_DEFINITION
     cpu: 0.5
