--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -130,8 +130,7 @@ promote_task:
     folder: $CIRRUS_WORKING_DIR/.m2/repository
   env:
     GITHUB_TOKEN: VAULT[development/github/token/${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-promotion token]
-    GCF_ACCESS_TOKEN: VAULT[development/kv/data/promote data.token]
-    PROMOTE_URL: VAULT[development/kv/data/promote data.url]
+    ARTIFACTORY_PROMOTE_ACCESS_TOKEN: VAULT[development/artifactory/token/${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-promoter access_token]
   script:
     - cirrus_promote_maven
   cleanup_before_cache_script:
